--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -19,5 +19,56 @@
     "bio-ajm-iview-1": "from now on this is your workplace",
     "bio-ajm-iview-2": "this is modern slavery",
     "bio-ajm-iview-3": "I thought you had already left",
-    "bio-ajm-iview-4": "it really was like that"
+    "bio-ajm-iview-4": "it really was like that",
+
+    "bio-bl": "Ngoc Bich Pfaff was born in Vietnam in 1964. She came to the GDR as an apprentice at the age of 17 and then worked in Schwarzenberg-Erzebirge. Contrary to the regulations for residence, Ngoc Bich Pfaff became pregnant and decided to give birth to her daughter in 1986. With the support of a German acquaintance, she was able to stay in the GDR and continue working despite being a mother. In 1987, Ngoc Bich Pfaff married a German man for the right to stay. Today she has her own tailoring business in Chemnitz, where she still lives.",
+    "bio-bl-iview-1": "you are seen quite differently",
+
+    "bio-dm": "David Macou was born in Mozambique in 1959. He came to the GDR in 1979 at the age of 19 as one of the first Mozambican contract workers. He worked at VEB Braunkohlewerk Welzow [Schwarze Pumpe]. He lived with Polish, Vietnamese and Mozambican contract workers in a dormitory in Hoyerswerda. In May 1990 and September 1991, David Macou witnessed the attacks by neo-Nazis on the contract workers' dormitory to the applause of his neighbours. Hoyerswerda was David Macou's home for 12 years until all the contract workers were sent back to Mozambique in October 1991. David Macou is part of the group that protests weekly in Maputo, demanding the payment of wages and pensions.",
+    "bio-dm-iview-1": "watching like a theatre",
+    "bio-dm-iview-2": "getting a visit",
+    "bio-dm-iview-3": "I was a real slave",
+
+    "bio-ad": "Dorina S. was born in 1969 and grew up in Rostock-Lichtenhagen. After completing an apprenticeship as a shop assistant, she worked as a carer for mentally handicapped young people in Rostock-Lichtenhagen from 1988. Andreas S. was born in 1965 and grew up with five other siblings in Rostock's Hansa neighbourhood. Until an accident at work, he was a skilled worker for geological drilling. From 1989, he worked with mentally disabled young people in Rostock-Lichtenhagen. Dorina and Andreas S. got to know each other through their work together in the residence for people with disabilities. After the birth of their daughter, they moved to Rostock-Lichtenhagen in 1990, where they witnessed the pogroms in August 1992. They still live near Rostock-Lichtenhagen.",
+    "bio-ad-iview-1": "a friendly relationship ",
+    "bio-ad-iview-2": "we wanted that in the end",
+    "bio-ad-iview-3": "they're taking my job away from me now",
+    "bio-ad-iview-4": "the whole structure was breaking down",
+    "bio-ad-iview-5": "it was take-over",
+    "bio-ad-iview-6": "they were in a frenzy",
+    "bio-ad-iview-7": "we didn't want that",
+
+    "bio-dhn": "Duong Hoai Nam was born in Vietnam in 1958. Duong Hoai Nam grew up during the Vietnam War and came to the GDR as a contract labourer in 1988. From 1988 to 1991, he worked full-time in a combine in Karl-Marx-Stadt (now Chemnitz). Today he lives in Leipzig, works as a trainer in his own martial arts gym and is a passionate musician.",
+    "bio-dhn-iview-1": "I love Germany",
+
+    "bio-ia": "Ibraimo Alberto was born in Mozambique in 1963. He came to the GDR in 1981 to study, but instead he was employed as a contract worker at VEB Fleischkombinat Berlin and trained as a butcher. After a short stay in Mozambique, Ibraimo Alberto returned to the GDR. He worked for VEB Glaswerk Stralau as a group leader for Mozambican contract labourers. At the same time, he began to train in boxing. In 1988, Ibraimo Alberto was granted ‘partial citizenship’ in the GDR to fight in international boxing competitions. In 1990 he moved to Schwedt, where he later qualified as a social worker and was employed as foreigners' representative for the town of Schwedt. He now lives in Berlin again, where he continues to be socially involved and trains young people in boxing.",
+    "bio-ia-iview-1": "society wasn't that interested",
+    "bio-ia-iview-2": "what are you looking at",
+
+    "bio-jr": "Jan K. was born in 1968, René K. in 1976. In September 1991, both were part of the crowd in Hoyerswerda that attacked the dormitory for contract workers and the refugee center. Today, Jan K. and René K. are committed members of the VVN-BdA [Association of Persecutees of the Nazi Regime - League of Anti-Fascists]. Both still live in Hoyerswerda.",
+    "bio-jr-iview-1": "that was politics in the East",
+    "bio-jr-iview-2": "there were no boundaries",
+    "bio-jr-iview-3": "Hoyerswerda was the beginning",
+
+    "bio-ks": "Kordula S. was born in Eberswalde in 1960. She worked at SVKE [Schlacht- und Verarbeitungskominat Eberswalde] until 1991, where she was employed, among other things, as a group manager for Angolan and Mozambican contract workers. In 2000, Kordula S. founded her own funeral parlour. She has been a member of the PDS, now DIE LINKE, since 1999 and has been involved in local politics. Kordula S. is also involved in voluntary work in associations and charitable organisations in the Schorfheide region.",
+    "bio-ks-iview-1": "for me it was an accident",
+
+    "bio-lg": "Lam Goltzsch was born in Hanoi in 1951. She came to the GDR straight after leaving school in 1968, where she studied mechanical engineering at the TU Dresden. Lam Goltzsch came to the GDR a second time in 1987 as a contract worker. She worked as a language mediator at VEB Kombinat Textima in Karl-Marx-Stadt (now Chemnitz). In 1989, she brought her younger daughter to the GDR. Lam Goltzsch married in 1992 and thus obtained a residence permit. Lam Goltzsch still lives in Chemnitz today, her two daughters work as a doctor and tax consultant respectively.",
+    "bio-lg-iview-1": "Homeland",
+
+    "bio-ls": "Lan Seifert was born in 1970 and Loi Bin Seifert was born in 1965. Both grew up in Vietnam and came to the GDR as contract workers in 1988. Lan and Huu Loi Bin Seifert worked at VEB Leuchtenbau Leipzig, where they met. After reunification, they married and had a son. For reasons of rationalisation, they could not both remain employed at the company, so Loi Bin decided to retrain. Lan is still employed at the former VEB Leuchtenbau [now Leipziger Leuchten GmbH], as she was before reunification. Loi Bin works at the BMW factory in Leipzig. Both still live in Leipzig and have a garden plot.",
+    "bio-ls-iview-1": "that's normal",
+
+    "bio-mm": "Moises Mvuama was born in Angola in 1966. He came to the GDR in 1987 with the desire to spend four or eight years training as a ship mechanic. At the age of 21, he was trained in the locksmith's workshop at SVKE [Schlacht- und Verarbeitungskominat Eberswalde] and worked as a contract labourer in Eberswalde until 1990. After the violent death of Amadeu Antonio, Moises decided to do educational work in schools. From 1994 to 1998, Moises worked for the RAA Angermünde [Regional Centre for Education and Integration]. Today he works as a social counsellor at the African Ecumenical Church. He lives with his family in Berlin.",
+    "bio-mm-iview-1": "racism became even stronger",
+    "bio-mm-iview-2": "in this country I have to die",
+    "bio-mm-iview-3": "today I no longer have that trauma",
+    "bio-mm-iview-4": "they didn't know any black people",
+
+    "bio-sr": "Siglinde R. was born in 1942. In 1977, she and her family were one of the first tenants in the Rostock-Lichtenhagen prefabricated housing estate. She now lives in the Sonnenblume apartment block in Rostock-Lichtenhagen.",
+
+    "bio-ot": "Silke O. was born in Hoyerswerda, Dennis O. was born in Queklenburg, both were born in 1963. Dennis O. met Silke O. in 1984 during his military service in the navy. Afterwards Dennis O. moved to Hoyerswerda in 1985 to marry Silke O.. Silke O. worked as a day nurse in a ‘Dauerheim’ and Dennis O. was employed at the VEB Gaskombinat Schwarze Pumpe. They were both 26 years old at the turn of the century. They have two children who were born in 1986 and 1989. Silke and Dennis O. continue to live and work in Hoyerswerda.",
+    "bio-ot-iview-1": "it wasn't meant in a bad way",
+    "bio-ot-iview-2": "this term ‘Vertragsarbeiter’",
+    "bio-ot-iview-3": "we were always safe"
 }
