position & color lang switch; "next interview" linebreaks

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -29,8 +29,8 @@
     "bio-sr": "Siglinde R. was born in 1942. In 1977, she and her family were one of the first tenants in the Rostock-Lichtenhagen prefabricated housing estate. She now lives in the Sonnenblume apartment block in Rostock-Lichtenhagen.",
     "bio-ot": "Silke O. was born in Hoyerswerda, Dennis O. was born in Queklenburg, both were born in 1963. Dennis O. met Silke O. in 1984 during his military service in the navy. Afterwards Dennis O. moved to Hoyerswerda in 1985 to marry Silke O.. Silke O. worked as a day nurse in a ‘Dauerheim’ and Dennis O. was employed at the VEB Gaskombinat Schwarze Pumpe. They were both 26 years old at the turn of the century. They have two children who were born in 1986 and 1989. Silke and Dennis O. continue to live and work in Hoyerswerda.",
 
-    "interview-next": "next interview",
-    "interview-prev": "previous interview",
+    "interview-next": "next\ninterview",
+    "interview-prev": "previous\ninterview",
 
     "dhn01-text-1": "I love Germany. From the very beginning, the first second, the first hour. I also have such lovely memories. It was such a great time working with my German colleagues. We flew to Germany in 1988, at the end of autumn and almost the beginning of winter. It was so nice for us, for me. I will never forget the memories of the first day, the first seconds and hours. A beautiful country, nice and quiet. On the way from Berlin to Chemnitz, we took a 30-minute break. I just went for a walk in the forest, I smell, I see and I want to stay there forever. Why? Our country [Vietnam] is also beautiful, but many things are still not beautiful. If you're always hungry and have to think all the time about what am I going to eat tomorrow, the day after tomorrow, what am I going to feed the child? That's a bad life. At least for us, we were no longer afraid here.",
     "dhn01-caption": "Karl-Marx-Stadt now Chemnitz, 1979. Image credit: Bundesarchiv, Bild 183-U0530-0019 / CC-BY-SA 3.0",
