--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,6 +5,7 @@
     "nav-about": "About us",
     "nav-english": "Deutsch",
     "virtual-exhibit-text": "enter virtual Exhibit",
+    "transcript": "Transcript",
 
     "no_id-audio-title": "",
 
